# onecero.one

./: .gitignore  1c1  API_GUIDE.md  ARCHITECTURE.md  MEMORY.md  README.md  update.sh
cli/: main.py
core/: Cargo.toml
core/src/: db.rs  main.rs
sidecar/: main.py  requirements.txt
